[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/skins/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://ui/MainDialog/DialogExitPanel.gd" type="Script" id=2]
[ext_resource path="res://ui/MainDialog/DialogPageSelector.tscn" type="PackedScene" id=3]

[node name="Panel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogPageSelector" parent="." instance=ExtResource( 3 )]

[node name="Grid" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Grid"]
margin_right = 175.0
margin_bottom = 17.0
text = "Are you sure you want to exit?"

[node name="HSeparator" type="HSeparator" parent="Grid"]
margin_top = 21.0
margin_right = 175.0
margin_bottom = 25.0

[node name="Button" type="Button" parent="Grid"]
margin_top = 29.0
margin_right = 175.0
margin_bottom = 52.0
text = "Terminate Execution"

[node name="Control" type="Control" parent="Grid"]
margin_top = 56.0
margin_right = 175.0
margin_bottom = 56.0

[node name="MainMenu" type="Button" parent="Grid"]
margin_top = 60.0
margin_right = 175.0
margin_bottom = 83.0
text = "Go to Main Menu"
[connection signal="page_selected" from="DialogPageSelector" to="." method="_on_DialogPageSelector_page_selected"]
[connection signal="pressed" from="Grid/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Grid/MainMenu" to="." method="_on_MainMenu_pressed"]
